--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -32,10 +32,10 @@
     aspect-ratio: 1;
     inline-size: -webkit-fill-available;
     -webkit-animation: rot 10s linear infinite both;
-            animation: rot 10s linear infinite both;
+    animation: rot 10s linear infinite both;
     max-width: 100%;
     -o-object-fit: scale-down;
-       object-fit: scale-down;
+    object-fit: scale-down;
   }
 }
 
@@ -90,7 +90,7 @@
     }
     &.animate::before {
       -webkit-animation: xtend 0.7s forwards;
-              animation: xtend 0.7s forwards; /* Trigger animation */
+      animation: xtend 0.7s forwards; /* Trigger animation */
     }
 
     &:last-child {
@@ -134,12 +134,12 @@
   transition: all 0.5s ease;
   isolation: isolate;
 
-  .wipe{
+  .wipe {
     -webkit-filter: invert(1);
-            filter: invert(1);
+    filter: invert(1);
   }
 
-  img{
+  img {
     -webkit-user-drag: none;
   }
 
@@ -278,7 +278,6 @@
     h5 {
       color: rgb(241, 241, 241);
     }
-   
   }
 }
 
@@ -310,7 +309,7 @@
     }
     select {
       background-color: transparent;
-      option{
+      option {
         background: var(--bg-dark) !important;
       }
     }
@@ -347,7 +346,7 @@
       color: var(--text-dark);
       text-transform: uppercase;
       background-color: transparent;
-      option{
+      option {
         background: var(--bg-color) !important;
       }
 
@@ -511,23 +510,28 @@
 }
 
 @media (max-width: 770px) {
-  .prodHero{
+  .prodHero {
     gap: 5vh;
+    overflow-x: hidden;
 
-  h1 {
-    font-size: clamp(4rem, 10vw, 7.55rem);
-    overflow-wrap: anywhere;
-    // line-break: anywhere;
-  }
-  .pInfo{
-    img {
-      max-width: 100%;
-      -o-object-fit: unset;
-         object-fit: unset;
-      aspect-ratio: 1;
+    h1 {
+      font-size: clamp(4rem, 10vw, 7.55rem);
+      overflow-wrap: anywhere;
+      // line-break: anywhere;
+    }
+    .pInfo {
+      img {
+        max-width: 100%;
+        -o-object-fit: unset;
+        object-fit: unset;
+        aspect-ratio: 1;
+      }
     }
   }
-}
+  .bgLogo {
+    width: 150px;
+    bottom: 100%;
+  }
   .pFeature {
     flex-direction: column-reverse;
     gap: 2em;
@@ -555,30 +559,16 @@
       // gap: 50px;
       margin-top: unset;
       align-items: stretch;
+      height: max-content;
     }
     .list {
-
       h5 {
         background: black;
         color: white;
         z-index: 1;
         line-break: anywhere;
       }
-      // span {
-      //   position: absolute;
-      //   top: 15px;
-      //   left: 50%;
-      //   translate: -50%;
-      //   rotate: 0deg;
-      //   transform: scale(1.15);
-      //   z-index: 0;
-      // }
-    }
 
-    & > img {
-      width: 100%;
-      /* position: sticky; */
-      bottom: 0px;
     }
   }
 
@@ -591,6 +581,9 @@
   }
 }
 @media (max-width: 500px) {
+  .pFeature li::before {
+    left: -16px;
+  }
   .pInfo {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
